--- a/styles/style.css
+++ b/styles/style.css
@@ -88,3 +88,15 @@ footer {
     background-color: var(--color3);
     box-shadow: var(--shadow);
 }
+
+.hidden {
+    display: none;
+}
+
+.Pete {
+    background-color: orange;
+}
+
+.Mohamed {
+    background-color: green;
+}
